--- a/index.css
+++ b/index.css
@@ -23,6 +23,11 @@ body {
     color: #480E8A;
 }
 
+.header3 {
+    font-size: 1.5em; /* Adjusted for better responsiveness */
+    color: #480E8A;
+    padding: 1em;
+}
 .Button_gayd {
     display: flex;
     justify-content: center;
@@ -51,7 +56,9 @@ body {
 .products_name {
     font-size: 2.5em; /* Adjusted for better responsiveness */
     color: #00b2ff;
-    margin: 2em 0;
+    margin: 1.5em 0;
+    width: 100%;
+    
 }
 
 .product-grid {
@@ -115,7 +122,7 @@ body {
 @media (max-width: 480px) { /* Extra small screens */
     .header {
         font-size: 2.5em;
-    }
+    }ِ
 
     .header2 {
         font-size: 1.2em;
